<resources>
    <string name="app_name">Tramas</string>
    <string name="IngMens">Ingrese mensaje a codificar</string>
    <string name="Aceptar">Aceptar</string>
    <string name="ETX">Ingrese ETX en binario</string>
    <string name="Cabecera">Ingrese Cabecera en binario</string>
    <string name="SYN">Ingrese SYN en binario</string>
    <string name="SOH">Ingrese SOH en binario</string>
    <string name="STX">Ingrese STX en binario</string>
    <string name="CRC">Ingrese CRC en binario</string>
    <string name="Direccion">Ingrese Direccion en binario</string>
    <string name="Control">Ingrese Control en binario</string>
    <string name="DeteccionError">Ingrese Deteccion de errores en binario</string>
    <string name="Preambulo">Ingrese Preambulo</string>
    <string name="delimitador">Ingrese Delimitador</string>
    <string name="DirDestino">Ingrese Direccion de Destino</string>
    <string name="DirOrigen">Ingrese Direccion de Origen</string>
    <string name="Longitud">Ingrese Longitud</string>
    <string name="DirOrign">Ingrese Direccion de Origen</string>
    <string name="TramControl">Ingrese Trama de Control</string>
</resources>
