<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trama"
        android:gravity="center"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/IngValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/IngMens" />
        <EditText
            android:id="@+id/IngCRC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/CRC"/>
        <EditText
            android:id="@+id/IngETX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ETX"/>
        <EditText
            android:id="@+id/IngCabecera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Cabecera"/>
        <EditText
            android:id="@+id/SYN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/SYN"/>
        <EditText
            android:id="@+id/IngSOH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/SOH"/>
        <EditText
            android:id="@+id/IngSTX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/STX"
            android:inputType="numberDecimal"/>
        <Button
            android:id="@+id/Aceptar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aceptar"/>

        <EditText
            android:id="@+id/MostValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>


</ScrollView>