<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Enthernet">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trama"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/IngValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/IngMens"
            android:maxLength="20" />

        <EditText
            android:id="@+id/IngDestino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/DirDestino"
            android:digits="0123456789ABCDEF"
            android:maxLength="12" />

        <EditText
            android:id="@+id/IngOrigen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/DirOrigen"
            android:digits="A B C D E F0123456789"
            android:maxLength="12" />

        <EditText
            android:id="@+id/IngDeteccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/DeteccionError"
            android:inputType="numberDecimal"
            android:digits="01"
            android:maxLength="32" />


        <Button
            android:id="@+id/Aceptar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Theme.AppCompat.Light.NoActionBar"
            android:text="@string/Aceptar" />


        <TextView
            android:id="@+id/MostValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#000" />

        <TextView
            android:id="@+id/MostValor8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textColor="#000" />

    </LinearLayout>
</ScrollView>