<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".trama802">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/trama"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/IngMensajeCodificar"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IngMens"
            android:maxLength="20"
            style="@style/stiloEditext"
            />

        <EditText
            android:gravity="center"
            android:id="@+id/IngTramControl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/TramControl"
            android:inputType="number"
            android:digits="01"
            android:maxLength="2"
            style="@style/stiloEditext" />

        <EditText
            android:gravity="center"
            android:id="@+id/IngDuracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese Duracion"
            android:inputType="number"
            android:digits="01"
            android:maxLength="2"
            style="@style/stiloEditext" />

        <EditText
            android:id="@+id/IngDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese Direccion 1"
            android:inputType="number"
            android:digits="01"
            android:maxLength="6"
            style="@style/stiloEditext" />

        <EditText
            android:id="@+id/IngDireccion2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese Direccion 2"
            android:inputType="numberDecimal"
            android:digits="01"
            android:maxLength="6"
            style="@style/stiloEditext" />

        <EditText
            android:id="@+id/IngDireccion3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese Direccion 3"
            android:inputType="numberDecimal"
            android:digits="01"
            android:maxLength="6"
            style="@style/stiloEditext" />

        <EditText
            android:id="@+id/IngContSec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese Control de Secuencia"
            android:inputType="numberDecimal"
            android:digits="01"
            android:maxLength="2"
            style="@style/stiloEditext" />

        <EditText
            android:gravity="center"
            android:id="@+id/IngDireccion4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese Direccion 4"
            android:inputType="numberDecimal"
            android:digits="01"
            android:maxLength="6"
            style="@style/stiloEditext" />

        <EditText
            android:gravity="center"
            android:id="@+id/IngCRC8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ingrese CRC"
            android:inputType="numberDecimal"
            android:digits="01"
            android:maxLength="4"
            style="@style/stiloEditext" />


        <Button
            android:id="@+id/Aceptar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Aceptar" />

        <EditText
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true" />
    </LinearLayout>
</ScrollView>